# justiceclient

./: .gitignore  README.md
native/: CMakeLists.txt  app.rc  bootstrap.ps1  build-installer.ps1  build.ps1  installer.nsi  package.ps1  run.ps1
native/src/: auth.cpp  bridge.cpp  bridge.h  cors_test.cpp  discord.cpp  download.cpp  download.h  extra.cpp  game.cpp  handlers.cpp  host.cpp  host.h  http.cpp  http.h  main.cpp  mods.cpp  overlay.cpp  updater.cpp  util.cpp  util.h  zip.cpp  zip.h
web/: index.html  installer-splash.html  overlay.html  updater.html
web/assets/: distant-horizons-shaders-wow-v0-2qcj9c0ob7oc1.png.url
